Fixed cards not sliding issue and more alignment adjustments.

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body,
   overflow: hidden;
   white-space: pre-wrap;
   background: url("./assets/gray-blur.jpg") center center / cover no-repeat;
+  user-select: none;
   font-size: 100%;
   font-family:
     -apple-system,
@@ -67,7 +68,7 @@ a:active {
   padding: 0;
   position: absolute;
   display: grid;
-  grid-template: 6% 66% 27% / 35% 30% 15% 20%;
+  grid-template: 6% 64% 30% / 35% 30% 15% 20%;
   z-index: 1;
 }
 
@@ -101,7 +102,7 @@ a:active {
 */
   width: 100%;
   height: 100%;
-  display: flex;
+  display: flex;  
   align-items: center;
   justify-content: center;
   grid-row-start: 1;
@@ -120,10 +121,14 @@ a:active {
 
 /********************************** Basecard **********************************/
 .basecard-container {
+/*
+  border: solid 2px yellow;
+*/
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: flex-end;
+  padding-top: 49px;
+  display: flex;  
+  align-items: flex-start;
   justify-content: center;
   grid-row-start: 2;
   grid-row-end: 3;
@@ -135,6 +140,7 @@ a:active {
 .basecard-main::-webkit-scrollbar { display: none; }
 
 .basecard-main {
+  border: solid 2px red;
   width: 80%;
   height: 88%;
   display: flex;
@@ -149,9 +155,11 @@ a:active {
 
 /********************************** Carousel **********************************/
 .carousel-container {
+/*
+  border: solid 2px pink;
+*/
   width: 100%;
   height: 100%;
-  padding-top: 10px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -159,7 +167,7 @@ a:active {
   grid-row-end: 4;
   grid-column-start: 1;
   grid-column-end: 5;
-  z-index: 3;
+  z-index: 4;
 }
 
 .carousel-icon {
@@ -169,7 +177,7 @@ a:active {
   padding: 1.3px;
   border: 3px solid rgba(227,228,230, 0.9);
   border-radius: 10px;
-  background-color: rgba(169, 173, 182, 0.8);
+  background-color: rgba(169, 173, 182, 0.7);
 }
 
 .folder-svg {
